--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,9 @@
     "statusBar.foreground": "#15202b",
     "panel.border": "#1accff",
     "sideBar.border": "#1accff",
-    "editorGroup.border": "#1accff"
+    "editorGroup.border": "#1accff",
+    "statusBar.border": "#00b3e6",
+    "titleBar.border": "#00b3e6"
   },
   "peacock.color": "#00b3e6"
 }
