Update titles and contents

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Auth React",
-  "name": "Project Auth React",
+  "name": "Auth React",
   "icons": [
     {
       "src": "favicon.ico",
